se realizan cambios en reservas list

--- a/client/app/reservations/reservations-list/reservations-list.html
+++ b/client/app/reservations/reservations-list/reservations-list.html
@@ -27,7 +27,6 @@
 			<tbody md-body>
 				<tr md-row ng-repeat="item in vm.reservations  | limitTo:vm.query.limit: (vm.query.page -1) * vm.query.limit | filter:vm.filtro">
 
-          <!-- <td md-cell><md-checkbox ng-model="isChecked" aria-label="Finished?"></md-checkbox></td> -->
           <td md-cell>{{item.date | date:'yyyy-MM-dd'}}</td>
 					<td md-cell>{{item.initialHour | date:'HH:mm:ss'}}</td>
           <td md-cell>{{item.finalHour | date:'HH:mm:ss'}}</td>
@@ -36,17 +35,8 @@
           <td md-cell>{{item.idSoccerFields.idHeadquarters.idEstablishments.name}}</td>
           <td md-cell>{{item.idSoccerFields.name}}</td>
 					<td md-cell><md-button class="btn btn-warning" ng-if="item.estado" ng-model="item.estado" aria-label="Switch 2" ng-click="vm.Cancelar(item)" >Cancelar </md-button></td>
-					<td md-cell><md-button class="btn btn-danger" ng-if="!item.estado"  ng-model="item.estado" aria-label="Switch 2" ng-click="vm.Cancelar(item) " >Activar </md-button></td>
+					<!-- <td md-cell><md-button class="btn btn-danger" ng-if="!item.estado"  ng-model="item.estado" aria-label="Switch 2" ng-click="vm.Cancelar(item) " >Activar </md-button></td> -->
 
-          <!-- <td md-cell><button type="button" class="btn btn-warning" ng-click="vm.Cancelar(item) ">Cancelar</button></td> -->
-          <!-- <md-checkbox aria-label="Select All"
-                                 ng-checked="isChecked()"
-                                 md-indeterminate="isIndeterminate()"
-                                 ng-click="toggleAll()">
-                      <span ng-if="isChecked()">Un-</span>Select All
-                    </md-checkbox> -->
-
-          <!-- <td md-cell><a class="btn btn-primary" >Editar</a></td> -->
 				</tr>
 			</tbody>
 		</table>
@@ -61,5 +51,4 @@
 </div>
 </div>
 
-	<!--MD DATA TABLE-->
 </section>
