se hacen cambios en diseño y en reservas

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -52,39 +52,74 @@
   </div>
 </section>
 
+<div class="Portfolio " >
+    <!-- <div class="Portfolio-image"> -->
+        <h2 class="Portfolio-title ">ESTABLECIMIENTOS</h2>
+    <!-- </div> -->
 
-<section class="InfoContainer img-thumbnail col-md-12 " ng-if="vm.authService.isAuthenticated()">
-  <h2>Establecimientos</h2>
-  <!-- <div class="container"> -->
-   <div class="row text-center">
-    <div class="col-xs-12 col-md-4 img-thumbnail contenido">
-      <img class="imgInfo" src="../../assets/images/main/6.jpg" alt="" />
-      <h3>Maracana</h3>
-      <h6>Calle 22a # 21-12</h6>
-      <!-- <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button> -->
+    <!-- <div class="container Portafolio"> -->
+      <div class="gallery-grids">
+        <div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
+          <ul id="myTab" class="nav nav-tabs" role="tablist" data-aos="zoom-in">
+          </ul>
+
+          <div id="myTabContent" class="tab-content">
+            <div role="tabpanel" class="tab-pane fade active in Portafolio" id="" aria-labelledby="home-tab">
+              <div class="tab_img row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="">
+                  <div class="Portafolio-item">
+                    <div class="Ahead card0"></div>
+                    <div class="Back">
+                      <br>
+                      <h1>La Tonga</h1>
+                      <h4>calle 22 # 21-12</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
+                  <div class="Portafolio-item">
+                    <div class="Ahead card2"></div>
+                    <div class="Back">
+                      <br>
+                      <h1>La Tonga</h1>
+                      <h4>calle 22 # 21-12</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
+                  <div class="Portafolio-item">
+                    <div class="Ahead card3"></div>
+                    <div class="Back">
+                      <br>
+                      <h1>La Tonga</h1>
+                      <h4>calle 22 # 21-12</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
+                  <div class="Portafolio-item">
+                    <div class="Ahead card4"></div>
+                    <div class="Back">
+                      <br>
+                      <h1>La Tonga</h1>
+                      <h4>calle 22 # 21-12</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="InfoContainer-button">
+        <button type="button" ui-sref="establishments" class="btn  btn-warning mas  "><i class="fa fa-plus"></i> Mas Informacion</button>
+
+      </div>
+
     </div>
-    <div class="col-xs-12 col-md-4 img-thumbnail">
-      <img class="imgInfo" src="../../assets/images/main/4.jpg" alt="" />
-      <h3>Juventus</h3>
-      <h6>Calle 42 # 9-12</h6>
-      <!-- <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button> -->
-    </div>
-    <div class="col-xs-12 col-md-4 img-thumbnail">
-      <img class="imgInfo" src="../../assets/images/main/3.JPG" alt="" />
-      <h3>La tonga</h3>
-      <h6>calle 47 # 34-12</h6>
-      <!-- <button type="button" ui-sref="courts({id:item.idEstablishments})" class="btn btn-lg btn-success ver">Ver Mas</button> -->
-
-    </div>
-   </div>
-  </div>
-  <br>
-  <div class="InfoContainer-button">
-    <button type="button" ui-sref="establishments" class="btn  btn-warning mas  "><i class="fa fa-plus"></i> Mas Informacion</button>
-
-  </div>
-
-</section>
 
 
 <section class="Intro">
