--- a/client/app/courts/courts.html
+++ b/client/app/courts/courts.html
@@ -8,6 +8,7 @@
           <img src="../../assets/images/courts/2png"   height="100" width="100%" class="img-thumbnail img">
           <div class="caption">
             <h2 class="text-center">{{item.name}}</h2>
+            <h4 class="text-center">{{item.valor}}</h4>
             <button type="button" class="btn btn-primary col-md-push-3 col-md-offset-5 col-sm-offset-5 col-xs-offset-4" ui-sref="reservations({id:item.idSoccerFields})" >Reservar</button>
 
           </div>
