se realizan cambios en el main y se arregla scroll

--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -30,7 +30,7 @@
               </div>
             </div>
           </md-input-container>
-          <div class="form-group CheckBox" layout="row" layout-align="start center">
+          <div class="form-groupo CheckBox" layout="row" layout-align="start center">
                    <input type="checkbox" class="checkbox" onchange="document.getElementById('password1').type = this.checked ? 'text': 'password'">
                    <span class="Check"> Ver contraseña</span>
                    <!--input class="Login-check" type="checkbox" id="rem">
