--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -16,7 +16,7 @@
             <div class="carousel-caption animated flipInY">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
-                <button ui-sref="users-create" ng-if="isAuthenticated()" class="btn btn-danger">EMPECEMOS</button>
+                <button ui-sref="establishments" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
 
@@ -25,7 +25,7 @@
             <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
-                <button ui-sref="users-create" ng-if="isAuthenticated()" class="btn btn-danger">EMPECEMOS</button>
+                <button ui-sref="establishments" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
 
@@ -34,7 +34,7 @@
             <div class="carousel-caption animated fadeInDown">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
-                <button ui-sref="users-create" ng-if="isAuthenticated()" class="btn btn-danger">EMPECEMOS</button>
+                <button ui-sref="establishments" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
 
 <div class="Portfolio " >
     <!-- <div class="Portfolio-image"> -->
-        <h2 class="Portfolio-title ">ESTABLECIMIENTOS</h2>
+        <h2 class=" col-xs-12 col-xs-12 col-md-12 col-lg-12 text-center"><strong>ESTABLECIMIENTOS</strong></h2>
     <!-- </div> -->
 
     <!-- <div class="container Portafolio"> -->
