--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -13,10 +13,10 @@
         <div class="carousel-inner" role="listbox">
           <div class="item active">
             <img class="img-responsive" src="assets/images/main/1.jpg" alt="...">
-            <div class="carousel-caption animated flipInY">
+            <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
-                <button ui-sref="establishments" class="btn btn-danger">EMPECEMOS</button>
+                <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
 
@@ -25,16 +25,16 @@
             <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
-                <button ui-sref="establishments" class="btn btn-danger">EMPECEMOS</button>
+                <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
 
           <div class="item">
             <img class="img-responsive" src="assets/images/main/4.jpg" alt="...">
-            <div class="carousel-caption animated fadeInDown">
+            <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
-                <button ui-sref="establishments" class="btn btn-danger">EMPECEMOS</button>
+                <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
 
 <div class="Portfolio " >
     <!-- <div class="Portfolio-image"> -->
-        <h2 class=" col-xs-12 col-xs-12 col-md-12 col-lg-12 text-center"><strong>ESTABLECIMIENTOS</strong></h2>
+        <h2 class="Portfolio-title ">ESTABLECIMIENTOS</h2>
     <!-- </div> -->
 
     <!-- <div class="container Portafolio"> -->
@@ -66,7 +66,7 @@
           <div id="myTabContent" class="tab-content">
             <div role="tabpanel" class="tab-pane fade active in Portafolio" id="" aria-labelledby="home-tab">
               <div class="tab_img row">
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="">
+                <div class="col-xs-12  col-md-4 col-lg-4  portfolio-grids Portafolio-wrap" data-aos="">
                   <div class="Portafolio-item">
                     <div class="Ahead card0"></div>
                     <div class="Back">
@@ -76,7 +76,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
+                <div class="col-xs-12  col-md-4 col-lg-4  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
                   <div class="Portafolio-item">
                     <div class="Ahead card2"></div>
                     <div class="Back">
@@ -86,7 +86,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
+                <div class="col-xs-12  col-md-4 col-lg-4  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
                   <div class="Portafolio-item">
                     <div class="Ahead card3"></div>
                     <div class="Back">
@@ -96,7 +96,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3  portfolio-grids Portafolio-wrap" data-aos="zoom-in">
                   <div class="Portafolio-item">
                     <div class="Ahead card4"></div>
                     <div class="Back">
@@ -105,7 +105,7 @@
                       <h4>calle 22 # 21-12</h4>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
 
             </div>
