se hacen cambios en reservas list

--- a/client/app/nosotros/nosotros.html
+++ b/client/app/nosotros/nosotros.html
@@ -35,7 +35,8 @@
           <div class="profileinfo">
             <h1>Julian Andres Chaparro</h1>
             <h3>Diseñador</h3>
-            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+            <p class="bio text-justify" >Desarrollar y diseñar la estructura de páginas web, desarrollar páginas siguiendo los
+               lineamientos establecidos por la empresa</p>
           </div>
         </div>
       </div>
@@ -43,8 +44,9 @@
         <div class="firstinfo"><img src="assets/images/Profile/2.jpg"/>
           <div class="profileinfo">
             <h1>Carlos Jose Victoria</h1>
-            <h3>Progamador</h3>
-            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+            <h3>Analista</h3>
+            <p class="bio text-justify">Me encarga de medir el alcance que generan distintas acciones en la web,
+               para ello, utilizo distintas herramientas de análisis que le permiten obtener los datos con los que trabajare</p>
           </div>
         </div>
       </div>
@@ -68,21 +70,23 @@
   <div class="container Oculto">
     <div class="row">
     <div class="content visible-xs col-xs-12">
-       <div class="card1 ">
+       <div class="card1 col-xs-12 ">
         <div class="firstinfo"><img src="assets/images/Profile/1.jpg"/>
           <div class="profileinfo">
             <h1>Julian Andres Chaparro</h1>
             <h3>Diseñador</h3>
-            <p class="text-justify">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+            <p class="bio text-justify" >Desarrollar y diseñar la estructura de páginas web, desarrollar páginas siguiendo los
+               lineamientos establecidos por la empresa</p>
           </div>
         </div>
       </div>
-      <div class="card1">
+      <div class="card1  col-xs-12">
         <div class="firstinfo"><img src="assets/images/Profile/2.jpg"/>
           <div class="profileinfo">
             <h1>Carlos Jose Victoria</h1>
-            <h3>Progamador</h3>
-            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+            <h3>Analista</h3>
+            <p class="bio text-justify">Me encarga de medir el alcance que generan distintas acciones en la web,
+               para ello, utilizo distintas herramientas de análisis que le permiten obtener los datos con los que trabajare</p>
           </div>
         </div>
       </div>
