--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -52,9 +52,9 @@
   </div>
 </section>
 
-<div class="Portfolio " >
+<div class="Portafolio " >
     <!-- <div class="Portfolio-image"> -->
-        <h2 class="Portfolio-title ">ESTABLECIMIENTOS</h2>
+        <h2 class="col-xs-12 col-md-12 text-center "><strong>ESTABLECIMIENTOS</strong></h2>
     <!-- </div> -->
 
     <!-- <div class="container Portafolio"> -->
