--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -2,23 +2,24 @@
  <div class="user-profile">
    <div class="profile-header-background img-responsive"><img src="assets/images/Profile/3.jpg"alt="Profile Header Background"></div>
    <div class="row">
-     <div class="col-md-4">
+     <div class="col-md-5 col-sm-6">
        <div class="profile-info-left">
-         <div class="text-center">
-           <img src="assets/images/Photos/{{vm.getProfilePicture()}}" alt="Avatar" class="avatar  img-circle img-responsive">
-           <h2>{{vm.user.names}} {{vm.user.lastNames}} </h2>
+         <div class=" col-xs-12 col-md-12 col-lg-8 col-lg-push-2">
+           <img src="assets/images/Photos/{{vm.getProfilePicture()}}" alt="Avatar" class="avatar  img-circle img-responsive ">
+           <h2 class="text-center col-md-12 col-xs-12">{{vm.user.names}} {{vm.user.lastNames}} </h2>
          </div>
-         <div class="action-buttons">
-           <div class="row">
+         <div class="row">
+         <div class="action-buttons col-md-12">
            <form name="" ng-submit="vm.create(form)">
 
-             <div class="col-xs-7 col-md-7">
+             <div class="col-xs-12 col-sm-6 col-md-6 ">
                <button href="#" class="btn btn-success btn-block select "ngf-select ng-model="vm.file"
                name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB"
-               ngf-min-height="100" ngf-resize="{width: 700, height: 700}"><i class="fa fa-spinner hidden-xs"></i> Selecciones Archivo</button>
+               ngf-min-height="100" ngf-resize="{width: 700, height: 700}"><i class="fa fa-spinner "></i> Selecciones Archivo</button>
              </div>
-             <div class="col-xs-5">
-               <button class="btn btn-primary btn-block Subir" type="submit"><i class="fa fa-upload"></i> Subir foto</button>
+
+             <div class="col-xs-12 col-sm-6 col-md-6">
+               <button class="btn btn-primary btn-block Subir" type="submit"><i class="fa fa-upload"></i> Subir foto </button>
              </div>
            </div>
          </div>
@@ -27,7 +28,7 @@
 
            </div>
            </div>
-           <div class="col-md-8">
+           <div class="col-md-7 col-sm-6">
              <div class="profile-info-right">
                <ul class="nav nav-pills nav-pills-custom-minimal custom-minimal-bottom admin-menu">
                  <br>
